# vmware-dora-evidence

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .workflow-trigger  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dora-evidence.ps1  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  security.yml  weekly-activity.yml
config/: config.template.yaml
docs/: index.md  installation.md
installation/: index.html
search/: search_index.json
src/: __init__.py  cli.py  dora_evidence.py
src/analyzers/: __init__.py  metrics_analyzer.py
src/collectors/: __init__.py  deployment_collector.py  incident_collector.py
src/integrations/: __init__.py  vmware_client.py
src/reporters/: __init__.py  report_generator.py
src/utils/: __init__.py  config_manager.py  logger.py
tests/: conftest.py
tests/unit/: test_deployment_collector.py
